clusters/pi_old_2/nextcloud/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud
  labels:
    private-ca: enabled
